--- a/.github/actions/test_filter/action.yml
+++ b/.github/actions/test_filter/action.yml
@@ -23,7 +23,12 @@ runs:
       git diff --name-only ${base_sha} > changed_files.txt
     shell: bash
   - name: "Get changed files"
-    if: inputs.trigger_type != 'workflow_dispatch'
+    if: inputs.trigger_type == 'push'
+    run: |
+      git ls-tree --full-tree -r --name-only HEAD > changed_files.txt
+    shell: bash
+  - name: "Get changed files"
+    if: inputs.trigger_type != 'workflow_dispatch' && inputs.trigger_type != 'push'
     run: |
       git diff --name-only ${{ inputs.base_sha }} > changed_files.txt
     shell: bash
