--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,6 +101,8 @@ documentation:
   before_script: |
     git config --global --add safe.directory $CI_PROJECT_DIR
     git fetch origin ${CI_MERGE_REQUEST_TARGET_BRANCH_NAME} --recurse-submodules=no
+    python3 -m venv doc_venv
+    source doc_venv/bin/activate
     pip install -r docs/requirements.txt
   script: |
     rm -rf docs/mkdoc docs/site || true
