Exclude throw from coverage

--- a/.github/workflows/cpu_tests.yml
+++ b/.github/workflows/cpu_tests.yml
@@ -98,7 +98,7 @@ jobs:
         if: needs.pre_job.outputs.should_skip == 'false' && matrix.toolchain == 'tests_coverage_toolchain'
         run: |
           pip install gcovr
-          gcovr --filter src --lcov coverage.lcov --merge-mode-functions=merge-use-line-0 build
+          gcovr --filter src --lcov coverage.lcov --merge-mode-functions=merge-use-line-0 build --exclude-throw-branches
       - name: Archive code coverage results
         if: needs.pre_job.outputs.should_skip == 'false' && matrix.toolchain == 'tests_coverage_toolchain'
         uses: actions/upload-artifact@v4
