--- a/.github/workflows/cpu_tests.yml
+++ b/.github/workflows/cpu_tests.yml
@@ -98,9 +98,11 @@ jobs:
         if: needs.pre_job.outputs.should_skip == 'false' && matrix.toolchain == 'tests_coverage_toolchain'
         run: |
           pip install gcovr
-          find -name '*gcno' | grep -v -e '^./src/.*'
-          find -name '*gcda' | grep -v -e '^./src/.*'
-          gcovr --filter src --lcov coverage.lcov --merge-mode-functions=merge-use-line-0 --exclude-throw-branches --exclude 'vendor/*' build
+          gcovr --filter src --lcov coverage.lcov --merge-mode-functions=merge-use-line-0 build
+          # Remove branch information (causes more problems than it fixes)
+          sed '/^BRDA:/d' -i coverage.lcov
+          sed '/^BRH:/d' -i coverage.lcov
+          sed '/^BRF:/d' -i coverage.lcov
       - name: Archive code coverage results
         if: needs.pre_job.outputs.should_skip == 'false' && matrix.toolchain == 'tests_coverage_toolchain'
         uses: actions/upload-artifact@v4
