--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -17,6 +17,8 @@ nav:
             - docs/first_steps/install.md # Installation guide
             - toolchains/README.md
         - DDC in Gyselalib++: docs/first_steps/DDC_in_gyselalibxx.md
+        - Tutorials:
+            - docs/first_steps/landau_damping_tutorial.md
   - Standards:
       - Coding Standard: docs/standards/CODING_STANDARD.md
       - Math & Physics: docs/standards/mathematical_and_physical_conventions.md
