--- a/.github/workflows/check_required_test_result.yml
+++ b/.github/workflows/check_required_test_result.yml
@@ -23,6 +23,6 @@ jobs:
       - uses: ./.github/actions/set_pr_status
         with:
           status: ${{ github.event.check_run.conclusion }}
-          pr_number: ${{ github.event.check_run.pull_requests.number }}
+          pr_number: ${{ github.event.check_run.pull_requests[0].number }}
           sha: ${{ github.event.check_run.head_sha }}
 
