--- a/.github/actions/linux_static_analysis_install/action.yml
+++ b/.github/actions/linux_static_analysis_install/action.yml
@@ -1,4 +1,4 @@
-name: Install linux dependencies for static analyses
+name: 'Install linux dependencies for static analyses'
 
 runs:
   using: "composite"
@@ -15,11 +15,11 @@ runs:
         path: |
           /usr/local/share/Cppcheck/
           /usr/local/bin/cppcheck
-        key: cppcheck-2-14-2
+        key: cppcheck-2-17-1
     - name: Install cppcheck
       if: steps.cache-cppcheck-restore.outputs.cache-hit != 'true'
       run: |
-        git clone -b 2.14.2 https://github.com/danmar/cppcheck.git
+        git clone -b 2.17.1 https://github.com/danmar/cppcheck.git
         cd cppcheck
         cmake -S . -B build
         cmake --build build
