Base CI scripts off devel not main (#250)
Update existing scripts to refer to `devel` instead of `main`. Update
documentation to refer to the correct branch. Delete out of date scripts
that refer to `main` (`bin/create_private_fork` and `bin/public_mirror`)

--- a/.github/workflows/cpu_tests.yml
+++ b/.github/workflows/cpu_tests.yml
@@ -24,9 +24,9 @@ on:
           - tests_release_omp_toolchain
           - tests_coverage_toolchain
       merge_target:
-        description: "The branch to which this branch should be compared to filter out costly tests (default: main)"
+        description: "The branch to which this branch should be compared to filter out costly tests (default: devel)"
         required: false
-        default: main
+        default: devel
         type: string
 
 concurrency:
