--- a/spack.yaml
+++ b/spack.yaml
@@ -5,6 +5,8 @@ spack:
   - 'cmake@3.15:'
   - 'googletest +gmock'
   - 'fftw ~mpi precision=double'
+  - 'fftw ~mpi precision=float'
+  - 'ginkgo'
   - 'lapack'
   - 'paraconf@0.4.15:'
   - 'pdi'
